<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollIndicators="end"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dip"
            android:layout_marginRight="16dip"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:background="@android:color/white">

                <TableRow android:background="@color/blue">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:divider="?android:dividerHorizontal"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:showDividers="middle"
                        android:text="@string/col1"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/col2"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />

                </TableRow>

                <TableRow
                    android:divider="?android:dividerVertical"
                    android:showDividers="middle">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/row1block"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/row1charges"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                </TableRow>

                <TableRow
                    android:divider="?android:dividerVertical"
                    android:showDividers="middle">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/row2block"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/row2charges"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                </TableRow>

                <TableRow
                    android:divider="?android:dividerVertical"
                    android:showDividers="middle">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/row3block"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/row3charges"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                </TableRow>

                <TableRow
                    android:divider="?android:dividerVertical"
                    android:showDividers="middle">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/row4block"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="center_horizontal"
                        android:padding="10sp"
                        android:text="@string/row4charges"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                </TableRow>
            </TableLayout>


            <EditText
                android:id="@+id/electric"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="number"
                android:ems="10"
                android:hint="@string/hint_electrical"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/rebate"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="number"
                android:ems="10"
                android:hint="@string/hint_rebate"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/btnCalculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_calculate" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_clear" />

            <TextView
                android:id="@+id/tvOutput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="16sp" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>